// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ScrollTop should not render component 1`] = `
<div
  className="scrolltop-hidden"
/>
`;

exports[`Component ScrollTop should not render component 2`] = `
<ScrollTop
  classes={
    Object {
      "scrollTop": "ScrollTop-scrollTop-1",
    }
  }
  show={false}
  showAfter={100}
/>
`;

exports[`Component ScrollTop should render component 1`] = `
<ForwardRef(Fab)
  aria-label="Scroll to top of page"
  classes={
    Object {
      "root": undefined,
    }
  }
  color="secondary"
  id="scrolltopbtn"
  onClick={[Function]}
  sx={
    Object {
      "display": Object {
        "md": "inline-flex",
        "xs": "none",
      },
    }
  }
  title="Scroll to top of page"
>
  <Memo(ForwardRef(ArrowUpwardIcon)) />
</ForwardRef(Fab)>
`;

exports[`Component ScrollTop should render component 2`] = `
<ScrollTop
  classes={
    Object {
      "scrollTop": "ScrollTop-scrollTop-1",
    }
  }
  show={true}
  showAfter={100}
/>
`;
